Fixes for better behaviour on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+html,
 body {
+  max-width: 100%;
   overflow-x: hidden;
+}
+
+body {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
